Implement Chainflip functionality

--- a/legacy/firmware/Makefile
+++ b/legacy/firmware/Makefile
@@ -67,6 +67,7 @@ OBJS += ethereum_tokens.o
 OBJS += nem2.o
 OBJS += nem_mosaics.o
 OBJS += stellar.o
+OBJS += chainflip.o
 endif
 
 OBJS += debug.o
@@ -145,6 +146,7 @@ OBJS += protob/messages-ethereum.pb.o
 OBJS += protob/messages-ethereum-definitions.pb.o
 OBJS += protob/messages-nem.pb.o
 OBJS += protob/messages-stellar.pb.o
+OBJS += protob/messages-chainflip.pb.o
 endif
 
 OPTFLAGS ?= -Os
